# noble_steed

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Comp_And_Entity.core  README.md
benchmarks/: main.cpp
cmake/: Noble_Steed.plist
data/scooby/: editor.imap
include/: dbg.h  window.h
include/noble_steed/: logo.h
include/noble_steed/container/: array.h  forward_list.h  hash_map.h  list.h  pair.h  stack.h  string.h  vector.h
include/noble_steed/core/: application.h  common.h  context.h  context_obj.h  engine.h  factory.h  filesystem.h  logger.h  resource.h  resource_cache.h  signal.h  system.h  tuple.h  variant.h
include/noble_steed/graphics/: material.h  mesh.h  renderer.h  shader.h  video_device.h  window.h
include/noble_steed/io/: archive.h  filesystem.h  input_map.h  input_translator.h  json_archive.h  logger.h
include/noble_steed/math/: vec2.h  vec3.h  vec4.h
include/noble_steed/memory/: allocator.h  callocator.h  doublylinkedlist.h  freelistallocator.h  linearallocator.h  poolallocator.h  singlylinkedlist.h  stackallocator.h  stacklinkedlist.h  stacklinkedlistimpl.h
include/noble_steed/scene/: component.h  entity.h  transform.h  world.h  world_chunk.h
include/noble_steed/serialization/: json_archive.h
logs/: multisink.txt
samples/: CMakeLists.txt  basic_window.cpp  comp_and_entity.cpp
samples/basic_window/: CMakeLists.txt  basic_window.cpp
samples/comp_and_entity/: CMakeLists.txt  comp_and_entity.cpp
samples/copy_assignment/: CMakeLists.txt  copy_assignment.cpp
samples/misc/: CMakeLists.txt  misc.cpp
samples/package_testing/: CMakeLists.txt  package_testing.cpp
src/: asset.h  basic_types.h  buffer.h  build_and_battle.cpp  build_and_battle.h  filesystem.cpp  filesystem.h  keycodes.h  log.h  main.cpp  nsdebug.h  nserror.cpp  nserror.h  nsmemory.cpp  nsmemory.h  nsstring.cpp  nsstring.h  platform.cpp  platform.h  profile_timer.cpp  profile_timer.h  window.cpp  window.h
src/container/: array.h  deque.h  forward_list.h  hash_map.h  hash_set.h  linked_list.h  list.h  map.h  pair.h  queue.h  set.h  singly_linked_list.h  stack.h  stack_linked_list.h  string.h  tuple.h  vector.h
src/core/: application.cpp  application.h  basic_types.h  common.cpp  common.h  context.cpp  context.h  context_obj.cpp  context_obj.h  engine.cpp  engine.h  event_queue.h  factory.h  filesystem.cpp  handle.cpp  handle.h  logger.cpp  profile_timer.cpp  profile_timer.h  python_bindings.cpp  resource.cpp  resource.h  resource_cache.cpp  resource_cache.h  signal.cpp  signal.h  string_hash.cpp  string_hash.h  system.cpp  system.h  type_collection_db.cpp  type_collection_db.h  type_info.cpp  type_info.h  variant.cpp  variant.h
src/graphics/: glfw_window.cpp  glfw_window.h  material.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h  system.cpp  video_device.cpp  window.cpp  window.h
src/hash/: crc32.cpp  keccak.cpp  md5.cpp  murmurhash.cpp  murmurhash.h  sha1.cpp  sha256.cpp  sha3.cpp
src/io/: archive.h  filesystem.cpp  filesystem.h  input_map.cpp  input_map.h  input_translator.cpp  input_translator.h  json_archive.cpp  logger.cpp  logger.h
src/math/: algorithm.cpp  algorithm.h  bounding_box.h  cube.h  explicit_inst.cpp  matrix2.h  matrix3.h  matrix4.h  nsmat2.h  nsmat3.h  nsmat4.h  nsquat.h  nsvec2.cpp  nsvec2.h  nsvec3.h  nsvec4.h  primitives.cpp  primitives.h  quaternion.h  vec2.h  vec3.h  vec4.cpp  vec4.h  vector2.cpp  vector2.h  vector3.h  vector4.h
src/memory/: allocator.cpp  allocator.h  callocator.cpp  doublylinkedlistimpl.h  free_list_allocator.cpp  free_list_allocator.h  free_list_mem_resource.cpp  free_list_mem_resource.h  freelistallocator.cpp  linear_allocator.cpp  linear_allocator.h  linear_mem_resource.cpp  linear_mem_resource.h  linearallocator.cpp  mem_resource.cpp  mem_resource.h  pool_allocator.cpp  pool_allocator.h  pool_mem_resource.cpp  pool_mem_resource.h  poolallocator.cpp  poolallocator.h  singlylinkedlist.h  singlylinkedlistimpl.h  stack_allocator.cpp  stack_allocator.h  stack_mem_resource.cpp  stack_mem_resource.h  stackallocator.cpp  stackallocator.h  stacklinkedlist.h  utils.cpp  utils.h
src/scene/: component.cpp  component.h  component_db.h  entity.cpp  entity.h  transform.cpp  transform.h  world.cpp  world.h  world_chunk.cpp  world_chunk.h
src/serialization/: json_archive.cpp
tests/: all.cpp  handle_test.cpp
tests/math/: testvec2.cpp  testvec3.cpp  testvec4.cpp  vec2.cpp
tools/: geometryc
