project(samples)

file(GLOB BASIC_WINDOW_SRC basic_window/*.cpp)
file(GLOB COMP_AND_ENTITY_SRC comp_and_entity/*.cpp)

if(WIN32)
elseif(APPLE)
add_executable(Basic_Window MACOSX_BUNDLE ${BASIC_WINDOW_SRC})
add_executable(Comp_And_Entity MACOSX_BUNDLE ${COMP_AND_ENTITY_SRC})
set_target_properties(Basic_Window PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${PLIST_FILE})
set_target_properties(Basic_Window PROPERTIES MACOSX_BUNDLE_BUNDLE_NAME "Basic_Window")
set_target_properties(Basic_Window PROPERTIES MACOSX_BUNDLE_BUNDLE_GUI_IDENTIFIER "com.Basic_Window")
set_target_properties(Comp_And_Entity PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${PLIST_FILE})
set_target_properties(Comp_And_Entity PROPERTIES MACOSX_BUNDLE_BUNDLE_NAME "Comp_And_Entity")
set_target_properties(Comp_And_Entity PROPERTIES MACOSX_BUNDLE_BUNDLE_GUI_IDENTIFIER "com.Comp_And_Entity")
else()
add_executable(Basic_Window ${BASIC_WINDOW_SRC})
add_executable(Comp_And_Entity ${BASIC_WINDOW_SRC})
endif()

target_link_libraries(Basic_Window ${TARGET_NAME})
target_link_libraries(Comp_And_Entity ${TARGET_NAME})